--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1970,6 +1970,16 @@
           object-fit: cover;
         }
       }
+      .img-head-rightb {
+        width: 100%;
+        height: 50%;
+        position: relative;
+        .img-head-right {
+          width: 100%;
+          aspect-ratio: 3/2;
+          object-fit: cover;
+        }
+      }
     }
   }
 
@@ -1999,7 +2009,7 @@
       .img-contain-right-box-class {
         position: sticky;
         position: -webkit-sticky;
-        top: 2%;
+        top: 0.7%;
         .img-kt-right {
           width: 100%;
           object-fit: cover;
@@ -2014,10 +2024,22 @@
     display: none;
   }
   .img-head-righta:hover .img-head-rightab {
-    display: block;
+    color: white;
+    display: flex;
+    top: 0;
+    // display: block;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     background-color: rgb(0, 0, 0, 0.5);
     z-index: 999;
+  }
+
+  .colorful-kt {
+    background-color: white !important;
+  }
+  .dropdown-toggle::after {
+    content: none;
   }
 }
