--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1719,14 +1719,26 @@
       align-items: center;
     }
   }
+
+  .kh-search-bar:focus-within .i-kh-ab {
+    transition: 1s;
+    position: absolute;
+    z-index: -1;
+  }
+  .i-kh-ab {
+    transition: all 2s;
+  }
+  .kh-search-bar:focus-within {
+    box-shadow: rgba(209, 2, 2, 0.405) 0px 0px 0px 2px;
+  }
   .kh-search-bar {
-    box-shadow: rgba(24, 19, 19, 0.193) 0px 0px 0px 2px;
+    box-shadow: rgba(93, 0, 0, 0.405) 0px 0px 0px 2px;
     // background-color: white;
     // margin-left: 8px;
     display: flex;
     padding: 2px 8px;
     min-width: 302px;
-    transition: 2s;
+    transition: 0.5s;
     cursor: pointer;
     align-items: center;
     border-radius: 5px;
